--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ajv": "^6.5.3",
     "eslint-config-react-app": "^2.1.0",
     "react": "^16.4.2",
+    "react-card-flip": "^0.2.1",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4"
   },
